--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,10 @@ cmake_policy(SET CMP0074 NEW)
 cmake_policy(SET CMP0077 NEW)
 cmake_policy(SET CMP0091 NEW)
 
+#set(CMAKE_C_VISIBILITY_PRESET hidden)
+#set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+#set(CMAKE_VISIBILITY_INLINES_HIDDEN TRUE)
+
 if(NOT WIN32)
     add_compile_options(-fvisibility=hidden -fPIC)
 endif()
@@ -18,25 +22,24 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
 
 include(windows_support)
 
+set(gRPC_BUILD_CSHARP_EXT OFF)
+set(protobuf_BUILD_TESTS OFF)
+set(BENCHMARK_ENABLE_LTO:BOOL OFF)
+set(BENCHMARK_ENABLE_TESTING:BOOL OFF)
+set(BUILD_STATIC_LIBS ON)
+set(BUILD_SHARED_LIBS OFF)
+set(RUN_HAVE_STD_REGEX 0)
+set(RUN_HAVE_POSIX_REGEX 0)
+set(RUN_HAVE_GNU_POSIX_REGEX 0)
+set(RUN_HAVE_STEADY_CLOCK 0)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-# set(gRPC_BUILD_CSHARP_EXT OFF)
-# set(protobuf_BUILD_TESTS OFF)
-# set(BENCHMARK_ENABLE_LTO:BOOL OFF)
-# set(BENCHMARK_ENABLE_TESTING:BOOL OFF)
-# set(BUILD_STATIC_LIBS ON)
-# set(BUILD_SHARED_LIBS OFF)
-# set(RUN_HAVE_STD_REGEX 0)
-# set(RUN_HAVE_POSIX_REGEX 0)
-# set(RUN_HAVE_GNU_POSIX_REGEX 0)
-# set(RUN_HAVE_STEADY_CLOCK 0)
-# set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-
-# set(PUBLIC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
-# set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rdparty)
+set(PUBLIC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
+set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rdparty)
 
 # add_subdirectory(src)
 
-# set(CMAKE_FOLDER 3rdparty)
-# add_subdirectory(${THIRD_PARTY_DIR}/grpc)
-# set(CMAKE_FOLDER)
+set(CMAKE_FOLDER 3rdparty)
+add_subdirectory(${THIRD_PARTY_DIR}/grpc)
+set(CMAKE_FOLDER)
 
