--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = 3rdparty/grpc
 	url = https://github.com/grpc/grpc
 	branch = v1.19.x
+[submodule "3rdparty/spdlog"]
+	path = 3rdparty/spdlog
+	url = https://github.com/gabime/spdlog.git
+	branch = v1.x
