--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,10 @@ elseif(CMAKE_COMPILER_IS_GNUCC)
     target_compile_options(service-mesh-cpp PRIVATE -Wno-conversion -Wno-pedantic -Wno-cast-qual -Wno-sign-compare)
 endif()
 
+if(BUILD_MODE MATCHES "Debug")
+    target_compile_options(service-mesh-cpp PUBLIC -g)
+endif()
+
 target_compile_features(service-mesh-cpp PUBLIC cxx_std_11)
 
 target_link_libraries(service-mesh-cpp PUBLIC libgrpc++.a)
