--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,8 @@ set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rdparty)
 if(BUILD_MODE MATCHES "Debug")
     message("##################BUILD DEBUG##################")
     set(CMAKE_CXX_FLAGS "-g ${CMAKE_CXX_FLAGS}")
-elseif()
+    add_definitions(-D SMS_DEBUG)
+else()
     message("##################BUILD Release##################")
 endif()
 
