--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ cmake_policy(SET CMP0091 NEW)
 
 if(NOT WIN32)
     add_compile_options(-fvisibility=hidden -fPIC)
+else()
+    add_compile_options(/WX-)
 endif()
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
@@ -23,8 +25,16 @@ set(protobuf_BUILD_TESTS OFF)
 set(BENCHMARK_ENABLE_LTO:BOOL OFF)
 set(BENCHMARK_ENABLE_TESTING:BOOL OFF)
 
-set(BUILD_STATIC_LIBS ON)
-set(BUILD_SHARED_LIBS OFF)
+if(PS_BUILD_SHARED)
+    set(BUILD_STATIC_LIBS OFF)
+    set(BUILD_SHARED_LIBS ON)
+    set(gRPC_BUILD_SHARED ON)
+else()
+    set(BUILD_STATIC_LIBS ON)
+    set(BUILD_SHARED_LIBS OFF)
+    set(gRPC_BUILD_SHARED OFF)
+endif()
+
 set(RUN_HAVE_STD_REGEX 0)
 set(RUN_HAVE_POSIX_REGEX 0)
 set(RUN_HAVE_GNU_POSIX_REGEX 0)
@@ -34,12 +44,21 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(PUBLIC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rdparty)
 
-if(BUILD_MODE MATCHES "Debug")
-    message("##################BUILD DEBUG##################")
-    set(CMAKE_CXX_FLAGS "-g ${CMAKE_CXX_FLAGS}")
-    add_definitions(-D PUSH_SDK_DEBUG)
+if(NOT WIN32)
+    if(PS_BUILD_MODE MATCHES "Debug")
+        message("##################BUILD DEBUG##################")
+        set(CMAKE_CXX_FLAGS "-g ${CMAKE_CXX_FLAGS}")
+        add_definitions(-D PUSH_SDK_DEBUG)
+    else()
+        message("##################BUILD Release##################")
+    endif()
 else()
-    message("##################BUILD Release##################")
+    if(PS_BUILD_MODE MATCHES "Debug")
+        message("##################BUILD DEBUG##################")
+        add_definitions(-D PUSH_SDK_DEBUG)
+    else()
+        message("##################BUILD Release##################")
+    endif()
 endif()
 
 set(CMAKE_FOLDER 3rdparty)
