--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,16 +24,8 @@ set(gRPC_BUILD_CSHARP_EXT OFF)
 set(protobuf_BUILD_TESTS OFF)
 set(BENCHMARK_ENABLE_LTO:BOOL OFF)
 set(BENCHMARK_ENABLE_TESTING:BOOL OFF)
-
-if(PS_BUILD_SHARED)
-    set(BUILD_STATIC_LIBS OFF)
-    set(BUILD_SHARED_LIBS ON)
-    set(gRPC_BUILD_SHARED ON)
-else()
-    set(BUILD_STATIC_LIBS ON)
-    set(BUILD_SHARED_LIBS OFF)
-    set(gRPC_BUILD_SHARED OFF)
-endif()
+set(BUILD_STATIC_LIBS ON)
+set(BUILD_SHARED_LIBS OFF)
 
 set(RUN_HAVE_STD_REGEX 0)
 set(RUN_HAVE_POSIX_REGEX 0)
@@ -44,21 +36,15 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(PUBLIC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rdparty)
 
-if(NOT WIN32)
-    if(PS_BUILD_MODE MATCHES "Debug")
-        message("##################BUILD DEBUG##################")
-        set(CMAKE_CXX_FLAGS "-g ${CMAKE_CXX_FLAGS}")
-        add_definitions(-D PUSH_SDK_DEBUG)
-    else()
-        message("##################BUILD Release##################")
+if(PS_BUILD_MODE MATCHES "Debug")
+    message("##################BUILD DEBUG##################")
+    if(NOT WIN32)
+        set(CMAKE_CXX_FLAGS "-g ${CMAKE_CXX_FLAGS}")     
+        set(CMAKE_C_FLAGS "-g ${CMAKE_C_FLAGS}")  
     endif()
+    add_definitions(-D PUSH_SDK_DEBUG)
 else()
-    if(PS_BUILD_MODE MATCHES "Debug")
-        message("##################BUILD DEBUG##################")
-        add_definitions(-D PUSH_SDK_DEBUG)
-    else()
-        message("##################BUILD Release##################")
-    endif()
+    message("##################BUILD Release##################")
 endif()
 
 set(CMAKE_FOLDER 3rdparty)
