--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,21 @@ file(
 )
 
 if(PS_BUILD_SHARED)
-    add_library(push_sdk SHARED ${_source_list} ${_public_headers_list})
+    if(MSVC)
+        add_library(push_sdk SHARED ${_source_list} ${_public_headers_list})
+        target_link_directories(push_sdk PUBLIC ${CMAKE_BINARY_DIR}/3rdparty/grpc/${PS_BUILD_MODE})
+        target_link_directories(push_sdk PUBLIC ${CMAKE_BINARY_DIR}/3rdparty/grpc/third_party/protobuf/${PS_BUILD_MODE})
+        target_link_directories(push_sdk PUBLIC ${CMAKE_BINARY_DIR}/3rdparty/grpc/third_party/boringssl/ssl/${PS_BUILD_MODE})
+        target_link_directories(push_sdk PUBLIC ${CMAKE_BINARY_DIR}/3rdparty/grpc/third_party/boringssl/crypto/${PS_BUILD_MODE})
+        target_link_directories(push_sdk PUBLIC ${CMAKE_BINARY_DIR}/3rdparty/grpc/third_party/cares/cares/lib/${PS_BUILD_MODE})
+        target_link_directories(push_sdk PUBLIC ${CMAKE_BINARY_DIR}/3rdparty/grpc/third_party/zlib/${PS_BUILD_MODE})
+
+        if(PS_BUILD_MODE MATCHES "Debug")
+            target_link_libraries(push_sdk grpcd gprd grpc++d  address_sortingd libprotobufd ssld cryptod caresd zlibstaticd ws2_32)
+        else()
+            target_link_libraries(push_sdk grpc gpr grpc++  address_sorting libprotobuf ssl crypto cares zlibstatic ws2_32)
+        endif()
+    endif()
 else()
     add_library(push_sdk STATIC ${_source_list} ${_public_headers_list})
 endif()
@@ -27,9 +41,7 @@ endif()
 if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     target_compile_options(push_sdk PRIVATE /MP)
 elseif(CMAKE_COMPILER_IS_GNUCC)
-    target_compile_options(push_sdk PRIVATE -Wno-attributes)
-    # disable warnings
-    target_compile_options(push_sdk PRIVATE -Wno-conversion -Wno-pedantic -Wno-cast-qual -Wno-sign-compare)
+    target_compile_options(push_sdk PRIVATE -Wall)
 endif()
 
 target_compile_features(push_sdk PUBLIC cxx_std_11)
