--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ endif()
 
 set(CMAKE_FOLDER 3rdparty)
 add_subdirectory(${THIRD_PARTY_DIR}/grpc)
+add_subdirectory(${THIRD_PARTY_DIR}/libevent)
 set(CMAKE_FOLDER)
 
 add_subdirectory(src)
