--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(BENCHMARK_ENABLE_LTO:BOOL OFF)
 set(BENCHMARK_ENABLE_TESTING:BOOL OFF)
 set(BUILD_STATIC_LIBS ON)
 set(BUILD_SHARED_LIBS OFF)
+set(EVENT__DISABLE_OPENSSL:BOOL ON)
 
 set(RUN_HAVE_STD_REGEX 0)
 set(RUN_HAVE_POSIX_REGEX 0)
