--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ endif()
 set(CMAKE_FOLDER 3rdparty)
 add_subdirectory(${THIRD_PARTY_DIR}/grpc)
 add_subdirectory(${THIRD_PARTY_DIR}/libevent)
+add_subdirectory(${THIRD_PARTY_DIR}/jsoncpp)
 set(CMAKE_FOLDER)
 
 add_subdirectory(src)
