ios构建先安装go(boringssl 测试用例依赖)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ cmake_policy(SET CMP0042 NEW)
 cmake_policy(SET CMP0048 NEW)
 cmake_policy(SET CMP0054 NEW)
 cmake_policy(SET CMP0063 NEW)
-cmake_policy(SET CMP0074 NEW)
-cmake_policy(SET CMP0077 NEW)
-cmake_policy(SET CMP0091 NEW)
+# ios构建系统不支持
+# cmake_policy(SET CMP0074 NEW)
+# cmake_policy(SET CMP0077 NEW)
+# cmake_policy(SET CMP0091 NEW)
 
 if(NOT WIN32)
     add_compile_options(-fvisibility=hidden -fPIC)
