--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ cmake_policy(SET CMP0063 NEW)
 # cmake_policy(SET CMP0091 NEW)
 
 # ios构建系统查找go
-find_program(GO_EXECUTABLE go PATHS /usr/local/bin)
+set(GO_EXECUTABLE /usr/local/bin/go)
+
 
 if(NOT WIN32)
     add_compile_options(-fvisibility=hidden -fPIC)
